--- a/LMS/Views/Shared/_LoginPartial.cshtml
+++ b/LMS/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<LMS.Core.Entities.User> SignInManager
+@inject UserManager<LMS.Core.Entities.User> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
