--- a/LMS/Views/Activities/Edit.cshtml
+++ b/LMS/Views/Activities/Edit.cshtml
@@ -24,9 +24,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="StarDate" class="control-label"></label>
-                <input asp-for="StarDate" class="form-control" />
-                <span asp-validation-for="StarDate" class="text-danger"></span>
+                <label asp-for="StartDate" class="control-label"></label>
+                <input asp-for="StartDate" class="form-control" />
+                <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
