--- a/LMS/Views/Courses/_Index_Partial_Course.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Course.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<LMS.Core.Entities.Course>
-<h3>Courses</h3>
-
+@*<h3>Courses</h3>*@
+<p></p>
 <table class="table">
     <thead>
         <tr>
@@ -43,3 +43,7 @@
 }
     </tbody>
 </table>
+
+
+
+           
