--- a/LMS/Views/Courses/_Index_Partial_Teacher.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Teacher.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<LMS.Core.Entities.User>
-<h3>Courses</h3>
+<h3>Teachers</h3>
 
 <table class="table">
     <thead>
@@ -10,9 +10,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.Course)
-            </th>
+            </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Email)
             </th>
@@ -21,6 +21,7 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
+           
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
@@ -28,17 +29,17 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.Course.Description)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
-            <td>
+            @*<td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
+            </td>*@
         </tr>
 }
     </tbody>
