--- a/LMS/Views/Courses/_Index_Partial_Course.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Course.cshtml
@@ -1,6 +1,9 @@
 ﻿@model IEnumerable<LMS.Core.Entities.Course>
-@*<h3>Courses</h3>*@
-<p></p>
+
+<div class="text-center pb-5">
+  <h3>Courses</h3>
+</div>
+
 <table class="table">
     <thead>
         <tr>
