--- a/LMS/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LMS/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,13 +5,15 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
+@*<h1>@ViewData["Title"]</h1>*@
 <div class="row">
     <div class="col-md-4">
         <section>
             <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
+                 <div class="pt-5">
+                <h2>Local account to log in.</h2>
                 <hr />
+                 </div>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
                     <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
