--- a/LMS/Views/Courses/IndexStudent.cshtml
+++ b/LMS/Views/Courses/IndexStudent.cshtml
@@ -1,6 +1,4 @@
 ﻿@using LMS.Core.Entities.ViewModels
-
-@*@model IEnumerable<LMS.Core.Entities.Course>*@
 @model IndexViewModel
 
 
@@ -8,64 +6,39 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div >
-    <h4 class="display-4">Welcome to Lexicon,
-        you are logged in as a Student
-        
-    </h4>
+<div class="text-center pt-5">
+    <h2>Welcome to Lexicon,you are logged in as a Student</h2>
+</div>
 
- 
-    <p>
-        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#View1" aria-expanded="false" aria-controls="View1">Modules</button>
-        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#View2" aria-expanded="false" aria-controls="View2">Activities</button>
-        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#View3" aria-expanded="false" aria-controls="View3">Students</button>
+<div class="text-center pt-5">
+<nav>
+  <div class="nav nav-tabs" id="nav-tab" role="tablist">
+    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Modules</button>
+    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false"> Activities</button>
+    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Students</button>
+    
+  </div>
+</nav>
 
-    </p>
+<div class="tab-content" id="nav-tabContent">
+  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+      This is some placeholder content the Home tab's associated content. 
+      Clicking another tab will toggle the visibility of this one for the next.
+      The tab JavaScript swaps classes to control the content visibility and styling.
+      You can use it with tabs, pills, and any other .nav-powered navigation.
+      @*<partial name="_Index_Partial_Course" model="@Model.ListOfCourses"/>*@
+  </div>
+  <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
+      This is some placeholder content the Home tab's associated content. 
+      Clicking another tab will toggle the visibility of this one for the next.
+      The tab JavaScript swaps classes to control the content visibility and styling.
+      You can use it with tabs, pills, and any other .nav-powered navigation.
+      @*<partial name="_Index_Partial_Teacher" model="@Model.ListOfUsers"/>*@
+  </div>
+  <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
+    <partial name="_Index_Partial_Student"  model="@Model.ListOfUsers"/>
+  </div>
+</div>
 
+</div>
 
-    <div class="collapse" id="View1">
-        <div class="card card-body">
-            <tbody id="Modules">Placeholder for list of modules for logged in user.
-
-               
-              @*  <partial name="_Index_Partial_Course" model="@Model.ListOfCourses" />*@
-
-            </tbody>
-        </div>
-    </div>
-
-
-    <div class="collapse" id="View2">
-        <div class="card card-body">
-            <tbody id="Teachers">Placeholder for list of Activities for logged in user.
-                
-
-                @*<partial name="_Index_Partial_Teacher" model="@Model.ListOfUsers" />*@
-
-            </tbody>
-        </div>
-    </div>
-
-
-    <div class="collapse" id="View3">
-        <div class="card card-body">
-            <tbody id="Teachers">
-
-                <partial name="_Index_Partial_Student" model="@Model.ListOfUsers" />
-
-            </tbody>
-        </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
