--- a/LMS/Views/Courses/IndexTeacher.cshtml
+++ b/LMS/Views/Courses/IndexTeacher.cshtml
@@ -1,72 +1,45 @@
 ﻿@using LMS.Core.Entities.ViewModels
-
-@*@model IEnumerable<LMS.Core.Entities.Course>*@
-   @model IndexViewModel
+@model IndexViewModel
 
 @{
     ViewData["Title"] = "Home Page";
 }
 
-<div @*class="text-center">*@
-    @*<h2 class="display-4">Welcome to Lexicon, you are logged in as a Teacher</h2>*@
+<div class="text-center pt-5">
+    <h2>Welcome to Lexicon, you are logged in as a Teacher</h2>
+</div>
 
-
-
-
-
-<p>
-<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#View1" aria-expanded="false" aria-controls="View1">Courses</button>
-<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#View2" aria-expanded="false" aria-controls="View2">Teachers</button>
-<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#View3" aria-expanded="false" aria-controls="View3">Students</button>
-
-</p>
-
-
-
-
-
-
-
-<div class="collapse" id="View1">
-  <div class="card card-body">
-        <tbody id="courses">
-        
-            @*<partial name="_Index_Partial_Student" model="@Model.ListOfUsers"/>*@
-            @*<partial name="_Index_Partial_Course" model="@Model.ListOfCourses"/>*@
-            <partial name="_Index_Partial_Course" model="@Model.ListOfCourses"/>
-
-    </tbody>
+<div class=" pt-5">
+<nav>
+  <div class="nav nav-tabs" id="nav-tab" role="tablist">
+    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Courses</button>
+    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false"> Teachers</button>
+    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Students</button>
+   
+  </div>
+</nav>
+<div class="tab-content" id="nav-tabContent">
+  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+      <partial name="_Index_Partial_Course" model="@Model.ListOfCourses"/>
+  </div>
+  <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
+      <partial name="_Index_Partial_Teacher" model="@Model.ListOfUsers"/>
+  </div>
+  <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
+    <partial name="_Index_Partial_Student" model="@Model.ListOfUsers"/>
   </div>
 </div>
 
-
-<div class="collapse" id="View2">
-  <div class="card card-body">
-        <tbody id="Teachers">
-
-                <partial name="_Index_Partial_Teacher" model="@Model.ListOfUsers"/>
-
-    </tbody>
-  </div>
 </div>
 
 
-<div class="collapse" id="View3">
-  <div class="card card-body">
-        <tbody id="Teachers">
 
-                <partial name="_Index_Partial_Student" model="@Model.ListOfUsers"/>
 
-    </tbody>
-  </div>
-</div>
+
+
 
 
  
 
 
 
-
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
