--- a/LMS/Views/Courses/_Index_Partial_Student.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Student.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<LMS.Core.Entities.User>
-<h3>Students</h3>
-
+<div class="text-center pb-5">
+  <h3>Students</h3>
+</div>
 <table class="table">
     <thead>
         <tr>
