--- a/LMS/Views/Courses/_Index_Partial_Teacher.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Teacher.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<LMS.Core.Entities.User>
-<h3>Teachers</h3>
+<div class="text-center pb-5">
+  <h3>Teachers</h3>
+</div>
 
 <table class="table">
     <thead>
