--- a/LMS/Views/Courses/IndexStudent.cshtml
+++ b/LMS/Views/Courses/IndexStudent.cshtml
@@ -13,10 +13,10 @@
 }
 
 <div >
-    <h5 class="display-4">Welcome to Lexicon,
-        you are logged in as a Student
+    <h4 class="display-4">Welcome to Lexicon,
+        you are logged in as a Student 
         
-    </h5>
+    </h4>
      Your current course:
 
     @{
@@ -111,84 +111,117 @@
      
      
      
-     
-     
-        <p>
-            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#View1" aria-expanded="false" aria-controls="View1">Modules</button>
-        
-             <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#View3" aria-expanded="false" aria-controls="View3">Students</button>
+    
 
-            </p>
-
-
-            <div class="collapse" id="View1">
-                <div class="card card-body">
-                    <tbody id="Modules">
-
-                        @foreach (var item in Model.ListOfCourses[courseId.Value - 1].Modules)
-                        {
-                   
-                            {
-                                <tr>
-                                    <td>
-                                     @Html.DisplayFor(modelItem => item.Name)
-                                    </td>
-                                     <br>    
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.StartDate)
-                                    </td>
-                                    to
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.EndDate)
-                                    </td>
-                            <br>
-                            <br>
-
-                                </tr>
-                            }
-                        }
-             
-
-                    </tbody>
-                </div>
-            </div>
-
-
+<nav>
+  <div class="nav nav-tabs" id="nav-tab" role="tablist">
+    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Modules</button>
+    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false"> Teachers</button>
+    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Students</button>
    
+  </div>
+</nav>
+
+    <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
 
 
-    <div class="collapse" id="View3">
-        <div class="card card-body">
-            <tbody id="Students">
 
+            @foreach (var item in Model.ListOfCourses[courseId.Value - 1].Modules)
+            {
 
-                @foreach (var item in Model.ListOfUsers)
                 {
-                    if (item.CourseId == courseId)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.FullName)
-                            </td>
-                            <br>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Email)
-                            </td>
-                           
-                            <br>
-                            <br>
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Name)
+                        </td>
+                        <br>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.StartDate)
+                        </td>
+                        to
+                        <td>
+                            @Html.DisplayFor(modelItem => item.EndDate)
+                        </td>
+                        <br>
+                        <br>
 
-                        </tr>
-                    }
+                    </tr>
                 }
-               
-                
-                
-                
-                
-                @* <partial name="_Index_Partial_Student" model="@Model.ListOfUsers" />*@
+            }
+            
+            
+            
+           
+        </div>
 
-            </tbody>
+
+
+
+        <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
+           @* <partial name="_Index_Partial_Teacher" model="@Model.ListOfUsers" />*@
+       Placeholder for teachers
+       
+       
+       </div>
+        
+        
+       
+        
+        <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
+
+
+
+            @foreach (var item in Model.ListOfUsers)
+            {
+                
+                if (item.CourseId == courseId) 
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.FullName)
+                        </td>
+                        <br>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Email)
+                        </td>
+
+                        <br>
+                        <br>
+
+                    </tr>
+                }
+            }
+
+
+            
         </div>
     </div>
+
+    
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
