--- a/LMS/Views/Courses/_Index_Partial_Student.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Student.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<LMS.Core.Entities.User>
-<div class="text-center pb-5">
-  <h3>Students</h3>
+<div class="text-center pt-1 pb-3">
+  <h3>All students</h3>
 </div>
 <table class="table">
     <thead>
