--- a/LMS/Areas/Identity/Pages/Account/Login.cshtml
+++ b/LMS/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,49 +6,177 @@
 }
 
 @*<h1>@ViewData["Title"]</h1>*@
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
+
+ <section class="background-radial-gradient overflow-hidden">
+
+
+ <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+
+    <div class="row gx-lg-5 align-items-center mb-5">
+
+      <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+
+        <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+          Create ways <br />
+          <span style="color: hsl(218, 81%, 75%)">for your future!</span>
+        </h1>
+
+        <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+          Lexicon is a study platform that enables every student and teacher to be comfortable every day in teaching and learning. This platform is easy to use for every user.
+        </p>
+      </div>
+
+      <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+        <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+        <div class="card bg-glass">
+          <div class="card-body px-4 py-5 px-md-5">
+           
+
+                <form id="account" method="post" class="row-cols-12">
                  <div class="pt-5">
-                <h2>Local account to log in.</h2>
+                <h2>Log in into your account.</h2>
                 <hr />
                  </div>
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
+
+@*                 Email input-----------------------
+*@               
+                    
+                     <div class="form-outline mb-4">           
+                     <label asp-for="Input.Email" class="form-label"></label>
+                    <input asp-for="Input.Email" class="form-control"  
+                    placeholder="Email" autocomplete="username"  aria-required="true" />
+                    
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
+                    </div>
+
+                   
+               
+
+@*                Pasword input-----------------------
+*@                 <div class="form-outline mb-4">                 
+                   <label asp-for="Input.Password" class="form-label"></label>
+                   <input asp-for="Input.Password" class="form-control form-control-mb"  placeholder="Password"autocomplete="current-password" aria-required="true" />
+                   <span asp-validation-for="Input.Password" class="text-danger"></span>
+                   </div>
+
+                @*Checkbox--------------------------*@
                 <div>
-                    <div class="checkbox">
+                    <div class="form-check  mb-4 white-space">
                         <label asp-for="Input.RememberMe" class="form-label">
                             <input class="form-check-input" asp-for="Input.RememberMe" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
-                    </div>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
-                </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
+                          
+                             <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
 
+                             </label>
+                    </div>
+
+                   
+
+                </div>
+
+@*                Log in button -----------------------
+     
+*@                <div  class="btn btn-primary btn-block mb-4">
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary align-center">Log in</button>
+                  </div>
+
+
+
+               </form>
+
+
+               </div>
+
+             
+             </div>
+             
+            </div>
+            
+
+        </div>
+       
     </div>
-</div>
+ 
+
+
+</section>
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+
+
+@*<div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+    <div class="row gx-lg-5 align-items-center mb-5">
+      <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+        <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+          The best offer <br />
+          <span style="color: hsl(218, 81%, 75%)">for your business</span>
+        </h1>
+        <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Temporibus, expedita iusto veniam atque, magni tempora mollitia
+          dolorum consequatur nulla, neque debitis eos reprehenderit quasi
+          ab ipsum nisi dolorem modi. Quos?
+        </p>
+      </div>
+
+      <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+        <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+        <div class="card bg-glass">
+          <div class="card-body px-4 py-5 px-md-5">
+            <form>
+              <!-- 2 column grid layout with text inputs for the first and last names -->
+              <div class="row">
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <input type="text" id="form3Example1" class="form-control" />
+                    <label class="form-label" for="form3Example1">First name</label>
+                  </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                  <div class="form-outline">
+                    <input type="text" id="form3Example2" class="form-control" />
+                    <label class="form-label" for="form3Example2">Last name</label>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Email input -->
+              <div class="form-outline mb-4">
+                <input type="email" id="form3Example3" class="form-control" />
+                <label class="form-label" for="form3Example3">Email address</label>
+              </div>
+
+              <!-- Password input -->
+              <div class="form-outline mb-4">
+                <input type="password" id="form3Example4" class="form-control" />
+                <label class="form-label" for="form3Example4">Password</label>
+              </div>
+
+              <!-- Checkbox -->
+              <div class="form-check d-flex justify-content-center mb-4">
+                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
+                <label class="form-check-label" for="form2Example33">
+                  Subscribe to our newsletter
+                </label>
+              </div>
+
+              <!-- Submit button -->
+              <button type="submit" class="btn btn-primary btn-block mb-4">
+                Sign up
+              </button>
+             </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>*@
