--- a/LMS/Views/Courses/_Index_Partial_Course.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Course.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<LMS.Core.Entities.Course>
 
-<div class="text-center pb-5">
-  <h3>Courses</h3>
+<div class="text-center pt-1 pb-3">
+  <h3>All courses</h3>
 </div>
 
 <table class="table">
@@ -37,10 +37,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.EndDate)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            <td class=" btn display-inline-block">
+                <button class="btn btn-light px-1  mb-1 "><a asp-action="Edit" asp-route-id="@item.Id">Edit <i class="fa fa-edit"></i> </a> </button>
+                
+                 <button  class="btn btn-light px-1 mb-1" ><a asp-action="Details" asp-route-id="@item.Id">Details  <i class="fa fa-info"></i></a></button>
+                 
+                  <button  class="btn btn-light px-1  mb-1 "  ><a asp-action="Delete" asp-route-id="@item.Id">Delete <i class="fa fa-trash"></i> </a></button>
             </td>
         </tr>
 }
