--- a/LMS/Views/Courses/IndexTeacher.cshtml
+++ b/LMS/Views/Courses/IndexTeacher.cshtml
@@ -9,6 +9,12 @@
     <h2>Welcome to Lexicon, you are logged in as a Teacher</h2>
 </div>
 
+<div class="row pt-5 pb-5">
+  <div class="col float-start">
+    <button type="submit" class="btn btn-primary">New Course</button>
+  </div>
+</div> 
+
 <div class=" pt-5">
 <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
