--- a/LMS/Views/Activities/Create.cshtml
+++ b/LMS/Views/Activities/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LMS.Core.Entities.Activity
+﻿@model LMS.Core.Entities.ViewModels.ActivityViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -10,8 +10,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-controller="Activities" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="@Model.ModuleId" />
+            <div class="form-group">
+                <select asp-for="ActivityTypeId" class="form-control" asp-items="ViewBag.ActivityTypeId"></select>
+                <span asp-validation-for="ActivityTypeId" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -33,14 +38,17 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <div class="pt-5">
+                   <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
             </div>
         </form>
     </div>
 </div>
 
+
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Courses" asp-action="IndexTeacher">Back to teacher</a>
 </div>
 
 @section Scripts {
