--- a/LMS/Views/Courses/_Index_Partial_Details.cshtml
+++ b/LMS/Views/Courses/_Index_Partial_Details.cshtml
@@ -48,9 +48,18 @@
        </div>
      </div>
      
-     <div class="text-center pb-5">
-  <h3>Modules And Related Activities </h3>
-</div>
+     <div class="text-center pb-5"> <h3>Modules And Related Activities </h3></div>
+
+@if (TempData["Message"] != null)
+{
+<div class="row pt-2 pb-2">
+        <div class="col-12">
+	       <div class="alert alert-info text-center">
+	          <strong>@TempData["Message"]</strong>
+	       </div>
+        </div>
+    </div>
+}
   
 @{
     int i = 1;
@@ -80,23 +89,24 @@
                     <strong>Description: </strong>@Html.DisplayFor(modelItem => moduleName.Description)<br>                   
                     </div>
                     <div class="col-6">
-                        <div class="text-center"> <strong>Activities</strong></div>
+                        <div class="text-center"> <strong>Activities.Click on the link to edit.</strong></div>
                     @foreach (var activity in Model.ListOfActivity)
                     {
                         if(activity.ModuleId == moduleName.Id){                      
-                         <a href="#" data-bs-placement="top"  data-bs-html="true" data-bs-toggle="tooltip"
+                         <a href="/Activities/Edit/@activity.Id" data-bs-placement="top"  data-bs-html="true" data-bs-toggle="tooltip"
                          title="<div>ActivivyType: @activity.ActivityTypeId<br>@activity.StartDate<br>@activity.EndDate<br> @activity.Description</div>"> @activity.Name</a><br>
                         }
                     }
+                    <div class="col float-end pt-5">
+                         <a class="btn btn-primary" asp-controller="Activities" asp-action="Create" asp-route-id="@moduleName.Id">New activity</a> 
+                    </div>
                    </div>
               </div>
               <div class="row">
                   <div class="col-6">
-                     <div class="float-start">
-                       <button class="btn btn-primary" type="submit">Edit</button>
-                     </div>
-                     <div class="col-6">
-                     </div>
+                     <div class="float-start">                       
+                         <a class="btn btn-primary" asp-controller="Modules" asp-action="Edit" asp-route-id="@moduleName.Id">Edit</a> 
+                     </div>                     
                </div>
           </div>
           </div>
