--- a/LMS/Views/Courses/IndexTeacher.cshtml
+++ b/LMS/Views/Courses/IndexTeacher.cshtml
@@ -8,9 +8,9 @@
 <div class="text-center pt-0">
     
 
-    <h3 class="my-2 display-6 fw-bold ls-tight" style="color:  hsl(218, 45%, 30%) ">
-         Welcome Teacher
-    </h3>
+    <h4 class="my-2 display-6 fw-bold ls-tight" style="color:  hsl(218, 45%, 30%); font-family: Century Gothic; ">
+         You are logged in as a teacher!
+    </h4>
 </div>
 
 <div class="pt-3">
@@ -21,7 +21,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Courses <i class="fa fa-book"></i></button>
     <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false" src="teacher-svgrepo-com.svg"> Teachers  <i class="fa fa-users"></i></button>
-    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Students <i class="fa fa-users"></i></button>
+    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Students <i class="fa fa-graduation-cap"></i></button>
    
   </div>
 </nav>
