--- a/LMS/Views/Courses/IndexStudent.cshtml
+++ b/LMS/Views/Courses/IndexStudent.cshtml
@@ -13,9 +13,9 @@
 
 <div >
     <p class="display-6">Welcome to Lexicon,
-        you are logged in as a Student 
-        
-    </p>
+        you are logged in as a Student </p>
+    <a asp-action="StudentDocuments">Go To Documents</a>
+    <br />
     Your current course:                              
     
 
